template_err.txt
Traceback (most recent call last):
  File "<string>", line 6, in <module>
    template = env.get_template('stok_fiyat_tanimlama.html')
  File "C:\projects\SilverCloud\.venv\Lib\site-packages\jinja2\environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\projects\SilverCloud\.venv\Lib\site-packages\jinja2\environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\projects\SilverCloud\.venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\projects\SilverCloud\.venv\Lib\site-packages\jinja2\environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\SilverCloud\.venv\Lib\site-packages\jinja2\environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "c:\projects\SilverCloud\app\templates\stok_fiyat_tanimlama.html", line 358, in template
    Sube_ID: {{ secili_sube_id }
    ^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}'
